--- a/index.css
+++ b/index.css
@@ -27,8 +27,8 @@ iframe{
 .logo_text p{
 	font-family: 'Alata', sans-serif;
 	text-align: justify;
-	font-size: 18PX;
-	width: 90%;
+	font-size: 18px;
+	width: 700px;
 	margin: auto;
 
 }
