--- a/home.css
+++ b/home.css
@@ -8,6 +8,7 @@
 		width: 500px;
 		/*height: 20%;*/
 		/*background: black;*/
+		margin-top: 20px;
 
 }
 .text_btm
@@ -36,17 +37,15 @@
 	/*background: #42dac8;*/
 	position: relative;
 }
-/*
-.main{
-	position: relative;*/
-}
-.links img{
+
+/*.links img{
 	height: 20%;
+	width: 20%;
 
-}
 
+}*/
 /*.links{
-	/*background: #42a0da;*/
+	background: #42a0da;
     margin-top: 70px;
 	display: flex;
 	flex-wrap: wrap;
@@ -55,5 +54,23 @@
 	justify-content: center;
 	padding: 0px;
 	position: relative;
-	top:345px;*/
+	top:345px;
+}*/
+
+.links img{
+	margin: auto;
+	width: 200px;
+	margin-top: 150px;
+}
+
+.links{	
+	width: 800px;
+	/*height: 150px;*/
+	/*background: #42dac8;*/
+	position: relative;
+	left:50%;
+	transform: translate(-50%,0%);
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
 }
