--- a/home.css
+++ b/home.css
@@ -1,27 +1,61 @@
-.header {
-	position: absolute;
-	top:2px;
+.form_FC{
+	position: relative;
+	top:50px;
 	left:50%;
 	transform: translate(-50%,-0);
+	/*background: #8a4af3;*/
 }
-.head{
-		width: 500px;
-		/*height: 20%;*/
-		/*background: black;*/
-		margin-top: 20px;
+
+iframe{
+	/*background: #f34a5e;*/
+}
+
+.logo{
+    position: relative; 
+	width:400px;
+	height:auto;
+	margin: 0px;
+}
+
+.logo_text{
+	/*background: #4a5ef3;*/
+	width: 695px;
+	margin: auto;
 
 }
+
+.logo_text p{
+	font-family: 'Alata', sans-serif;
+	text-align: justify;
+	font-size: 18px;
+	width: 700px;
+	margin: auto;
+
+}
+
+.box_3{
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	padding: 0px;
+	position: relative;
+	bottom:0px;
+	
+}
+
 .text_btm
 {
 	/*background: #4af3df;*/
 	width: 700px;
 	margin: auto;
-	height: 200px;
+	height: 10px;
 	position: relative;
-	margin-top: 200px;
-	}
+	margin-top: 50px;
+}
 
-	.sig{
+.sig{
 	margin: auto;
 	width: 200px;
 	/*background: #dac842;*/
@@ -38,12 +72,128 @@
 	position: relative;
 }
 
-.links img{
-	height: 20%;
-	width: 24%;
+.cg_logo{
+	width: 19%;
+	/*background: #a0da42;*/
+	margin: auto;
+	margin-top: 10px;
 }
 
-.links {
-  text-align: center;
-  }
+.links img{
+	width: 150px;
 
+}
+
+.links{
+	/*background: #42a0da;*/
+    margin-top: 70px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	padding: 0px;
+	position: relative;
+	top:345px;
+}
+
+footer{
+	margin-top: 300px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	padding: 0px;
+	position: relative;
+	bottom:0px;
+	font-family: 'Alata', sans-serif;
+	font-size: 15px;
+}
+.Policies{
+	/*background: #8c3f23;*/
+	width:700px;
+	margin:auto;
+	font-family: 'Alata', sans-serif;
+	font-size: 25px;
+}
+.Hd_P{
+    font-family: 'Alata', sans-serif;
+    font-size: 40px;
+    text-align: center;
+    text-transform: uppercase;
+}
+.maintext{
+	text-align: justify;
+}
+
+.button{
+	width: 700px;
+	margin: auto;
+	background: #e91e63;
+	text-align: center;
+	padding: 1px;
+	font-family: 'Roboto Slab', serif;
+	font-size: 20px;
+	border-radius: 50px;
+	color: white;
+	margin-top:10px;
+}
+
+.button:hover{
+	background: #1ec9e9;
+	color: black;
+}
+
+.button:active{
+	background: #0f6474;
+	color: white;
+}
+
+.button-back{
+	width: 700px;
+	margin: auto;
+	background: #8a4af3;
+	text-align: center;
+	padding: 1px;
+	font-family: 'Roboto Slab', serif;
+	font-size: 20px;
+	border-radius: 50px;
+	color: white;
+	margin-top:10px;
+
+}
+
+.button-back:hover{
+	background: #009688;
+	color: white;
+}
+
+.button-back:active{
+	background: #ffc107;
+	color: black;
+
+}
+
+.button-index{
+	width: 700px;
+	margin: auto;
+	background: #e91e63;
+	text-align: center;
+	padding: 1px;
+	font-family: 'Roboto Slab', serif;
+	font-size: 20px;
+	border-radius: 50px;
+	color: white;
+	margin-top:55px;
+}
+
+.button-index:hover{
+	background: #1ec9e9;
+	color: black;
+}
+
+.button-index:active{
+	background: #0f6474;
+	color: white;
+}
