--- a/index.css
+++ b/index.css
@@ -62,12 +62,13 @@ a{
 }
 
 footer{
-	position: relative;
-	text-align: center;
+	position: absolute;
 	padding:5px;
 	padding-top: 40px;
+	left:50%;
+	transform: translate(-50%,0);
 /*	position: relative;*/
-    margin-top: 560px;
+ /*   margin-top: 100px;*/
     bottom: 0px;
 	font-family: 'Alata', sans-serif;
 	font-size: 14px;
@@ -124,4 +125,20 @@ footer{
 	font-family: 'Alata', sans-serif;
 	font-size: 16px;
 	text-align: justify;
+}
+
+.site{
+	width: 400px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,0);
+}
+
+.site:hover{
+	width: 420px;
+}
+
+.site:active{
+	width: 380px;
 }
